# referee

./: .clang-format  .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  door  door.rdb  main.cpp  meson.build  meson.options  nominal.bokeh.html  referee.cpp  referee.hpp  xyz.h
.github/workflows/: image.yml
core/: antlr2ast.cpp  antlr2ast.hpp  builder.hpp  builtins.hpp  factory.hpp  module.cpp  module.hpp  referee.g4  semantics.hpp  strings.cpp  strings.hpp  syntax.cpp  syntax.hpp  utils.cpp  utils.hpp  visitor.hpp
core/loaders/: csv.cpp  csv.hpp  row.cpp  row.hpp  yml.cpp  yml.hpp
core/visitors/: canonic.cpp  canonic.hpp  compile.cpp  compile.hpp  csvHeaders.cpp  csvHeaders.hpp  loader.cpp  loader.hpp  negated.cpp  negated.hpp  printer.cpp  printer.hpp  rewrite.cpp  rewrite.hpp  typecalc.cpp  typecalc.hpp
docs/: accumulator-cost.md  duration-patterns-broken.md  external-functions.md  native-checkers.md  quantifiers.md  ragged-arrays.md  references.md  run-trace-format.md  run-traces.md  signal-node-leak.md  trace-expectations.md
editors/vscode/: .vscodeignore  LICENSE  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/snippets/: ref.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: ref.tmLanguage.json
editors/vscode/test/: package.json  sample.ref  tokenize.cjs
examples/door/: README.md  door.ref  nominal.bokeh.html  nominal.csv  nominal.html  nominal.ndjson
examples/extfunc/: README.md
examples/mctp/: README.md  byte-stream.csv  byte-stream.ref  i2c.ref  message-records.csv  message-records.ref  packet-records.csv  packet-records.ref  pec.c  spec.ref
lsp/: main.cpp
rdb/: database.cpp  database.hpp  ingest.cpp  ingest.hpp  ingest_ref.cpp  main.cpp  merge.cpp
runtime/: checker.cpp  referee_checker.h
schema/: run-trace.schema.json
schema/test/: big-example.ndjson  example.ndjson  validate.py
src/core/: antlr2ast.cpp  builtins.hpp  colormod.hpp  factory.hpp  json.hpp  position.hpp  strings.cpp  symbol.hpp  syntax.hpp
src/core/loaders/: csv.cpp  csv.hpp
src/core/visitors/: compile.hpp  csvHeaders.cpp  loader.cpp  printer.cpp  typecalc.cpp
src/driver/: referee.cpp  referee.hpp
src/lsp/: main.cpp
src/rdb/: database.hpp  ingest.cpp  ingest_ref.cpp  merge.cpp  merge.hpp
src/runtime/: strfns.cpp
test/: canonic.cpp  cli.cpp  diagnostics.cpp  json.cpp  logic.cpp  main.cpp  rdb.cpp  strings.cpp  test.ref  visitors.cpp
test/logic/: accumulate.csv  accumulate.ref  arrays2d.csv  arrays2d.ref  arrays_pinned.csv  arrays_pinned.ref  boolops.csv  boolops.ref  bounded.csv  bounded.ref  bounded_conf.csv  bounds.csv  bounds.ref  bytes.csv  bytes.ref  computed.csv  computed.ref  conf.csv  conf.yaml  conf_fields.csv  conf_fields.ref  conf_fields_conf.csv  data.csv  data.yaml  durations.csv  durations.ref  enums.csv  enums.ref  explain_rows.csv  explain_rows.ref  expr_chain.ref  expr_data.csv  expr_data.ref  expr_data_long.csv  expr_data_long.ref  expr_freeze.csv  expr_freeze.ref  expr_temporal.ref  extfunc.csv  extfunc.ref  (+31 more)
test/logic/import/: cycle_a.ref  cycle_b.ref  data.csv  main.ref  missing.ref  via_path.ref
test/logic/import/defs/: alias.ref  types.ref
test/logic/import/reqs/: one.ref  two.ref
test/logic/suite/: bad_a.csv  bad_b.csv  good.csv  spec.ref  suite.txt  wrong.txt
test/plugins/: helpers.c
tools/: README.md  view.py  view_bokeh.py
